# CRE8

./: .cursorrules  .gitignore  .pre-commit-config.yaml  LICENSE  OVERVIEW.md  README.md  SETUP-CLAUDE.sh  SETUP-CURSOR.sh  SETUP-VSCODE.sh  SETUP.sh  TASK.md  create-project.ps1  create-project.sh  install-claude-commands.sh  install-dev-tools.sh  pyproject.toml  requirements-dev.txt  setup.ps1  sync-commands.ps1  sync-commands.sh
.claude/: settings.local.json
.claude/commands/: validate-project.md  validate.md
.claude/skills/: README.md
.commands/: generate-validate.md  new-project.md  validate.md
.cursor/: README.md  settings.json
.cursor/prompts/: generate-prd.md  generate-prp.md  generate-validate.md  new-project.md  validate-project.md
.cursor/rules/: validate-context-engineering.mdc
.github/: copilot-instructions.md
.github/prompts/: README.md  build-prp.prompt.md  execute-prp.prompt.md  generate-prd.prompt.md  generate-prompt.prompt.md  generate-prp.prompt.md  generate-validate.prompt.md  new-project.prompt.md  summarize.prompt.md  validate-project.prompt.md  validate.prompt.md
.github/workflows/: validate.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  (+1 more)
docs/: overview.md  pre-commit.md
journal/: 2025-01-30.md  2026-02-06.md  2026-02-07.md  README.md
tutorials/: README.md  getting-started-walkthrough.md
use-cases/fastapi-backend/: .env.example  CLAUDE.md  README.md  pyproject.toml
use-cases/fastapi-backend/PRPs/: INITIAL.md
use-cases/fastapi-backend/PRPs/templates/: prp_fastapi_base.md
use-cases/fastapi-backend/examples/auth_middleware/: README.md  auth.py  dependencies.py
use-cases/fastapi-backend/examples/basic_crud/: README.md  main.py  models.py  router.py  schemas.py
use-cases/fastapi-backend/examples/shared/: database.py  settings.py
validation/: ultimate_validate_command.md
(+55 files in other folders)
