[project]
name = "context-engineering-template"
version = "0.1.0"
description = "Context Engineering Template - PRP workflow and slash commands for AI-assisted development"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pylint>=3.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pydantic-ai>=1.56.0",
    "pre-commit>=3.6.0",
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.0",
    "ipython>=8.20.0",
    "rich>=13.7.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["use-cases/pydantic-ai"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
